Fix spacing for navigation links

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -18,6 +18,7 @@
 
 .c-site__nav {
   padding-bottom: 1.5rem;
+  line-height: 1.5;
 }
 
 .c-site__link {
